updated connection functionality for sonar carousel, fixed sent greeting navigation from notification

--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -1,7 +1,6 @@
 <ion-content style="border-radius: 100px 100px 0 0;">
   <div style="width: 100%;height:100%;" class="whiteblue">
-    <div  class="mapclass" style="position: relative;height: 100%;width:100%; overflow: hidden;">
-
+    <div *ngIf="!isPrompt" class="mapclass" style="position: relative;height: 100%;width:100%; overflow: hidden;">
       <div class="top-result-container">
         <div class="c-fab-button" *ngIf="searchCriteria">
           <div (click)="showSonarSearchResultInListView(true)" > {{resultCount}} results </div>
