--- a/src/app/pages/notifications/notifications.page.html
+++ b/src/app/pages/notifications/notifications.page.html
@@ -17,10 +17,10 @@
   <ion-list>
     <ion-item lines="none" *ngFor="let not of notifiactions">
       <ion-avatar slot="start">
-        <img (click)="navigateToChat(not.notificationData)" src="assets/imgs/male.png" onError="this.src='assets/imgs/male.png'" />
+        <img (click)="notificationTitle(not.notificationData)" src="assets/imgs/male.png" onError="this.src='assets/imgs/male.png'" />
       </ion-avatar>
       <ion-label>
-        <div (click)="navigateToChat(not.notificationData)">
+        <div (click)="notificationTitle(not.notificationData)">
           <!-- <ion-card-title>Greeting</ion-card-title> -->
           <ion-card-title>{{not.notificationData.title}}</ion-card-title>
           <!-- <ion-card-subtitle><p>john_22 sent you a greeting request</p></ion-card-subtitle> -->
@@ -35,7 +35,7 @@
         </span>
       </ion-label>
     </ion-item>
-    <ion-item lines="none">
+    <!-- <ion-item lines="none">
       <ion-avatar slot="start">
         <img src="assets/imgs/male.png" onError="this.src='assets/imgs/male.png'" />
       </ion-avatar>
@@ -49,7 +49,7 @@
           <ion-icon name="document-text-outline"></ion-icon>
         </span>
       </ion-label>
-    </ion-item>
+    </ion-item> -->
   </ion-list>
 
 </ion-content>
