--- a/src/app/pages/map/marker-detail/marker-detail.component.scss
+++ b/src/app/pages/map/marker-detail/marker-detail.component.scss
@@ -813,12 +813,15 @@ ion-icon[name="chevron-back-circle-outline"]::part(inner) {
 }
 
 .userevent_namelogo{
-  width: 44px;
-height: 44px;
+  width: 50px;
+height: 50px;
 border: 1px solid var(--unnamed-color-707070);
 box-shadow: -1px 3px 6px #000000B8;
-border: 1px solid #707070;
+
 border-radius: 24px;
+border: 3px solid white;
+object-fit: cover; 
+
 }
 
 .eventname{
