--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -97,7 +97,7 @@
     </div>
   </div>
 
-  <ion-modal id="sonarSettingModal" #sonarSettingModal [initialBreakpoint]="0.36" [breakpoints]="[0]" >
+  <ion-modal id="sonarSettingModal" #sonarSettingModal [initialBreakpoint]="0.36" [breakpoints]="[0, 0.36]" >
     <ng-template>
       <sonar-settings (onCloseSetting)="closeSetting()"></sonar-settings>
     </ng-template>
