--- a/src/app/pages/map/viewing-users/viewing-users.component.html
+++ b/src/app/pages/map/viewing-users/viewing-users.component.html
@@ -120,7 +120,7 @@
               
               <div
                 style="display: flex; align-items: center; margin-left: auto;">
-                <ion-icon name="chat-3dots" (click)="presentRadioAlert()"></ion-icon>
+                <ion-icon name="chat-3dots" (click)="presentMenuModalForOther()"></ion-icon>
               </div>
             </div>
 
