--- a/src/app/pages/map/map-search/map-search.component.scss
+++ b/src/app/pages/map/map-search/map-search.component.scss
@@ -25,6 +25,7 @@ background-image: none !important;
 }
 .medbf{
     margin-top: 2px;
+    margin-bottom: 0px;
     
 }
 ion-range {
@@ -100,11 +101,12 @@ ion-range {
 }
 
 ion-item {
-    --min-height: 20px;
+--min-height: 20px;
 
     ion-checkbox {
         margin-top: 0px;
         margin-bottom: 0px;
+        -webkit-margin-end: 0px !important;
     }
 }
 
@@ -211,4 +213,38 @@ margin-top: 5px;
 .ion-modal > .ion-page{
     margin-top: 10px !important;
 }
+.button-container {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 39px;
+  }
 
+.search-button-events {
+    width: 150px;
+    height: 39px;
+    text-align: center; 
+}
+#events{
+    width: 109px;
+    height: 14px;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+}
+.search-button-donations{
+    width: 150px;
+    height: 39px;
+    text-align: center;
+}
+#donations{
+    width: 109px;
+    height: 14px;
+    font-size: 11px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+}
