--- a/src/app/pages/map/marker-detail/marker-detail.component.scss
+++ b/src/app/pages/map/marker-detail/marker-detail.component.scss
@@ -571,6 +571,7 @@ ion-img::part(image){
 .secondrow{
 
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
@@ -835,4 +836,16 @@ opacity: 1;
 .eventdate , .eventtime{
   font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 16px/19px var(--unnamed-font-family-sf-pro-display);
   letter-spacing: 0.25px;
+}
+
+.price{
+  font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 26px/31px var(--unnamed-font-family-sf-pro-display);
+color: var(--unnamed-color-1a3253);
+text-align: left;
+font: normal normal 600 26px/31px SF Pro Display;
+letter-spacing: 0.41px;
+color: #1A3253;
+font-weight: 600;
+margin-bottom: 0px;
+margin-top: 20px;
 }
